colcon_ws/log/build_2022-09-10_19-12-16/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In constructor ‘gatekeeper::Gatekeeper::Gatekeeper()’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:22:59: error: expected ‘)’ before ‘;’ token
   22 |       std::bind(&Gatekeeper::cloud_callback, this, ph::_1);
      |                                                           ^
      |                                                           )
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:21:77: note: to match this ‘(’
   21 |   m_pointCloudSub = this->create_subscription<sensor_msgs::msg::PointCloud2>("/camera/points", 10,
      |                                                                             ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(const ConstSharedPtr&)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:34:56: warning: unused parameter ‘msg’ [-Wunused-parameter]
   34 |   const sensor_msgs::msg::PointCloud2::ConstSharedPtr &msg)
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::insertScan(const Vector3&, const PCLPointCloud&)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:42:65: warning: unused parameter ‘sensorOrigin’ [-Wunused-parameter]
   42 | void Gatekeeper::insertScan( const geometry_msgs::msg::Vector3 &sensorOrigin,
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:43:24: warning: unused parameter ‘pc’ [-Wunused-parameter]
   43 |   const PCLPointCloud& pc)
      |   ~~~~~~~~~~~~~~~~~~~~~^~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: At global scope:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:53:2: warning: extra ‘;’ [-Wpedantic]
   53 | }; // namespace gatekeeper
      |  ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In function ‘int main(int, char**)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:63:11: warning: statement is a reference, not call, to function ‘rclcpp::shutdown’ [-Waddress]
   63 |   rclcpp::shutdown;
      |   ~~~~~~~~^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:63:11: warning: statement has no effect [-Wunused-value]
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
